@@ -14,6 +14,8 @@ thanks to James Ralston and Brad Clements for their efforts.
 - count() function on selectables now uses table primary key or 
 first column instead of "1" for criterion, also uses label "rowcount"
 instead of "count".  
+- got rudimental "mapping to multiple tables" functionality cleaned up, 
+more correctly documented
 
 0.2.1
 - "pool" argument to create_engine() properly propigates
